# instantly

./: Cargo.toml  license  readme.md
src/: data.rs  main.rs  util.rs
