[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
name = "instantly"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.6", features = ["attributes"]}
colored = "2.0"
futures = "0.3"
futures-util = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
surf = "2.0.0-alpha"
url = {version = "2.1", features = ["serde"]}
