[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "Download instagram photos instantly"
edition = "2018"
homepage = "https://github.com/arlyon/instantly"
license = "MIT"
name = "instantly"
repository = "https://github.com/arlyon/instantly.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.6", features = ["attributes"]}
clap = "3.0.0-beta.1"
colored = "2.0"
ellipse = "0.2"
futures = "0.3"
futures-util = "0.3"
human-panic = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
surf = "2.0.0-alpha"
url = {version = "2.1", features = ["serde"]}
